--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/ramen.html">Ramen Recipe</a>
+    <ul>
+    <li><a href="recipes/ramen.html">Ramen Recipe</a></li>
+    <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+    </ul>
 </body>
 </html>
