--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <ul>
     <li><a href="recipes/ramen.html">Ramen Recipe</a></li>
     <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
+    <li><a href="recipes/cheeseburger.html">Cheeseburger Recipe</a></li>
     </ul>
 </body>
 </html>
