--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="title">Odin Recipes</h1>
     <ul>
     <li><a href="recipes/ramen.html">Ramen Recipe</a></li>
     <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
