--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Odin Recipes</title>
 </head>
 <body>
     <h1 class="title">Odin Recipes</h1>
     <ul>
-    <li><a href="recipes/ramen.html">Ramen Recipe</a></li>
-    <li><a href="recipes/pizza.html">Pizza Recipe</a></li>
-    <li><a href="recipes/cheeseburger.html">Cheeseburger Recipe</a></li>
+    <li><a href="recipes/ramen.html" class="foodlist">Ramen Recipe</a></li>
+    <li><a href="recipes/pizza.html" class="foodlist">Pizza Recipe</a></li>
+    <li><a href="recipes/cheeseburger.html" class="foodlist">Cheeseburger Recipe</a></li>
     </ul>
 </body>
 </html>
