Styled website with CSS

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
     <h1 class="title">Odin Recipes</h1>
+    <p class="introduction">Welcome to my recipes website! In this website you'll find some of my favorite recipes and foods.</p>
+    <p class="introduction">I've always loved cooking, and, if I can say so myself, I'm pretty good at it. After some thinking, I came to the conclusion that it could be a great idea to share my recipes with the world!</p>
     <ul>
     <li><a href="recipes/ramen.html" class="foodlist">Ramen Recipe</a></li>
     <li><a href="recipes/pizza.html" class="foodlist">Pizza Recipe</a></li>
