--- a/recipes/ramen.html
+++ b/recipes/ramen.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="ramen.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Ramen Recipe</h1>
-    <h2><a href="../index.html">Home</a></h2>
-    <img src="../images/ramen.jpeg" width="400">
-    <h4>Use chicken, noodles, spinach, sweetcorn and eggs to
+    <h1 class="title">Ramen Recipe</h1>
+    <h2><a href="../index.html" class="home">Home</a></h2>
+    <img src="../images/ramen.jpeg" class="picture">
+    <h4 class="intro">Use chicken, noodles, spinach, sweetcorn and eggs to
          make this moreish Japanese noodle soup, 
         for when you crave something comforting yet light and wholesome.</h4>
-    <h3>Ingredients:</h3>
-    <ul>
+    <h3 class="list">Ingredients:</h3>
+    <ul class="items">
         <li>700ml chicken stock</li>
         <li>3 garlic cloves, halved</li>
         <li>4 tbsp soy sauce, plus extra to season</li>
         <li>1 tsp Worcestershire sauce</li>
         <li>thumb-sized piece of ginger, sliced</li>
     </ul>
-    <h3>Steps:</h3>
-    <ol>
+    <h3 class="list">Steps:</h3>
+    <ol class="items">
         <li>Mix 700ml chicken stock, 3 halved garlic cloves, 4 tbsp soy sauce, 
         1 tsp Worcestershire sauce, a sliced thumb-sized piece of ginger.</li>
         <li>Taste the stock – add 1 tsp white sugar or a little more
