--- a/recipes/cheeseburger.html
+++ b/recipes/cheeseburger.html
@@ -4,25 +4,26 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="cheeseburger.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Cheeseburger Recipe</h1>
-    <h2><a href="../index.html">Home</a></h2>
+    <h1 class="title">Cheeseburger Recipe</h1>
+    <h2 class="home"><a href="../index.html">Home</a></h2>
     <img src="../images/cheeseburger.jpeg" width="400">
-    <h4>Pepperoni pizza is probably the most popular and beloved one 
+    <h4 class="intro">Pepperoni pizza is probably the most popular and beloved one 
         among adults and kids in America. But with rich pepperoni, loads of cheese 
         and refined flour dough it is more of a splurge and an indulgence
          then an everyday food, especially if you are watching your calorie intake.</h4>
-    <h3>Ingredients:</h3>
-    <ul>
+    <h3 class="list">Ingredients:</h3>
+    <ul class="items">
         <li>1 cup tomato-and-basil pasta sauce </li>
         <li>1 (10-oz.) package pre baked whole wheat thin Italian pizza crust</li>
         <li>1/4 cup turkey pepperoni slices (about 24)</li>
         <li>1 1/2 cups (6 oz.) part-skim mozzarella cheese</li>
     </ul>
-    <h3>Steps:</h3>
-    <ol>
+    <h3 class="list">Steps:</h3>
+    <ol class="items">
         <li>Spread tomato-and-basil pasta sauce evenly over crust,
              leaving a 1-inch border around edges</li>
         <li>Top with half of pepperoni slices. Sprinkle with cheese. Top with remaining pepperoni.</li>
